deploy/bookings-db.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: bookings-db
spec:  
  serviceName: bookings-db
  replicas: 1
  template:
    metadata:
      labels:
        mybookings/app: bookings
        mybookings/tier: database
    spec:
      containers:
      - name: mongo
        image: mongo:3.4.3
        ports: 
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: data
          mountPath: /data/db
    volumeClaimTemplates:
    - metadata:
        name: data
        annotations:
          volume.alpha.kubernetes.io/storage-class: standard
      spec:
              accessModes: ["ReadWriteOnce"]
              resources:
                      requests:
                              storage: 1Gi
---
apiVersion:
kind: Service
metadata:
        name: bookings-db
spec:       
        clusterIP: None
        selector:
                mybookings/app: bookings
                mybookings/tier: database
        ports:
                - port: 27017
                  name: mongo
