deploy/events.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
        name: events
spec:
        replicas: 2
        template:
                metadata:
                        labels:
                                myevents/app: events
                                myevents/tier: api
                spec:
                        containers:
                                - name: api
                                  imagePullPolicy: Never
                                  image: myevents/eventservice
                                  ports:
                                          - containerPort: 8181
                                            name: http
---
apiVersion: v1
kind: Service
metadata:
        name: events
spec:
        selector:
                myevents/app: events
                myevents/tier: api
        ports:
                - port: 80
                  targetPort: 8181
                  name: http
