deploy/frontend.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata: 
        name: frontend
spec:
        template:
                metadata:
                        labels:
                                myevents/app: frontend
                spec:
                        containers:
                                - name: frontend
                                  image: myevents/frontend
                                  imagePullPolicy: Never
                                  ports:
                                          - containerPort: 80
                                            name: http
---
apiVersion: v1
kind: Service
metadata:
        name: frontend
spec: 
        type: NodePort
        selector:
                myevents/app
        ports:
                - port: 80
                  targetPort: 80
                  name: http
